# multicam_calibration

./: .clang-format  CMakeLists.txt  README.md  nodelet_plugin.xml  package.xml
.github/docker/: Dockerfile.bionic  Dockerfile.focal  Dockerfile.xenial  README.md
.github/scripts/: build.bash
.github/workflows/: main.yaml
calib/example/: example_camera-initial.yaml
cmake/: CeresConfig.cmake  CeresTargets-none.cmake
include/multicam_calibration/: calibration_data.h  calibration_nodelet.h  calibration_test_nodelet.h  calibrator.h  camera_extrinsics.h  frame_residual.h  get_init_pose.h  image_conversion_nodelet.h  intrinsic_estimator.h  multicam_apriltag_detector.h  test_rectify.h  types.h  undistort_nodelet.h  utils.h
launch/: calibration.launch  image_conversion.launch  test_calib.launch  undistort.launch
matlab/: read_debug_file.m
multicam_calibration/: CMakeLists.txt  package.xml
multicam_calibration/calib/example_camera/: example_camera-initial.yaml
multicam_calibration/config/: example.perspective
multicam_calibration/include/multicam_calibration/: calibration_component.h  calibration_data.h  calibration_test_component.h  camera_intrinsics.h  get_init_pose.h  multicam_apriltag_detector.h  types.h  undistort_component.h  utils.h
multicam_calibration/launch/: calibration.launch.py  calibration_test.launch.py  undistort.launch  undistort.launch.py
multicam_calibration/scripts/: example_calib_manager.py  kalibr_to_camerainfo.py  kalibr_to_urdf.py
multicam_calibration/src/: calibration_component.cpp  calibration_data.cpp  calibration_node.cpp  calibration_test_component.cpp  calibration_test_nodelet.cpp  calibrator.cpp  camera_extrinsics.cpp  camera_intrinsics.cpp  get_init_pose.cpp  image_conversion_nodelet.cpp  kalibr_to_camerainfo.py  multicam_apriltag_detector.cpp  test_rectify.cpp  test_rectify_node.cpp  undistort_component.cpp
multicam_calibration/test/radtan/: correct_output.txt  radtan-initial.yaml
multicam_calibration_srvs/: CMakeLists.txt  package.xml
multicam_calibration_srvs/srv/: ParameterCmd.srv
src/: calibration_data.cpp  calibration_nodelet.cpp  calibration_test_nodelet.cpp  calibrator.cpp  example_calib_manager.py  get_init_pose.cpp  image_conversion_nodelet.cpp  intrinsic_estimator.cpp  kalibr_to_camerainfo.py  make_test_corners.py  multicam_apriltag_detector.cpp  test_rectify.cpp  undistort_nodelet.cpp  update_intrinsics.py
srv/: CalibrationCmd.srv  ParameterCmd.srv
test/: README.md
test/equidistant/: correct_output.txt  equidistant-initial.yaml
