<?xml version="1.0"?>
<package format="3">
  <name>multicam_calibration</name>
  <version>1.0.0</version>
  <description>ROS2 package for camera calibration</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>image_transport</depend>
  <depend>apriltag_msgs</depend>
  <depend>apriltag_ros</depend>
  <depend>multicam_calibration_srvs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rcpputils</depend>
  <depend>tf2_ros</depend>

  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
